Fix broken oval and strange spacing in get involved page

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -495,15 +495,8 @@ footer .footer__socials {
     display: flex;
     flex-direction: column;
     row-gap: 10vh;
-    min-height: 40vh;
-    padding: 20vh 5vw 10vh;
-}
-
-.get-involved-2 > div:first-child {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10vh;
     width: 30vw;
+    padding: 20vh 5vw 10vh;
     align-self: center;
     align-items: center;
     text-align: center;
@@ -531,7 +524,8 @@ footer .footer__socials {
 .get-involved-3__oval {
     position: absolute;
     width: 145%;
-    height: 100%;
+    /* This calculation comes from parallax-full-width-height. The oval height MUST match that of the background image. */
+    height: calc(110vh - var(--nav-height));
     /* Position past left then hide overflow to achieve desired effect */
     left: -70%;
     overflow: hidden;
